--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.3.0",
     "framer-motion": "^4.1.17",
     "next": "12.0.2",
+    "next-pwa": "^5.4.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
