--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "next-pwa": "^5.4.0",
     "ramda": "^0.27.1",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-confetti": "^6.0.1",
+    "react-dom": "17.0.2",
+    "react-use": "^17.3.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.15.0",
