--- a/package.json
+++ b/package.json
@@ -6,15 +6,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "test": "jest"
+    "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@chakra-ui/react": "2.4.9",
     "@emotion/react": "11.10.5",
     "@emotion/styled": "11.10.5",
-    "framer-motion": "5.6.0",
     "next": "12.3.4",
-    "next-pwa": "5.5.5",
     "ramda": "0.28.0",
     "react": "18.2.0",
     "react-confetti": "6.1.0",
@@ -22,18 +20,12 @@
     "react-use": "17.4.0"
   },
   "devDependencies": {
-    "@testing-library/jest-dom": "5.16.5",
-    "@types/node": "18.11.18",
-    "@testing-library/react": "13.4.0",
+    "@types/node": "16.18.11",
     "@types/ramda": "0.28.21",
-    "@types/react": "18.0.26",
-    "babel-jest": "27.5.1",
+    "@types/react": "17.0.52",
     "eslint": "8.32.0",
     "eslint-config-next": "12.3.4",
-    "identity-obj-proxy": "3.0.0",
-    "jest": "29.3.1",
     "prettier": "2.8.3",
-    "react-test-renderer": "18.2.0",
     "typescript": "4.9.4"
   }
 }
